fixes some spacing issues, also begins work on the contact page

--- a/styling/styles.css
+++ b/styling/styles.css
@@ -63,6 +63,12 @@ h2 {
 
 
 
+/* Contact Page Formatting */
+.container-forms {
+    background-color: #ffffff;
+    padding: 20px;
+}
+
 
 
 /* footer formatting */
